[ISSUE #5262] sync develop from master (#5261)
* [ISSUE #4761] Update copyright year to 2024 (#4761) (#4762)

Co-authored-by: orol116 <oro116@naver.com>

* [ISSUE #4750] Replace sun.net.httpserver.HttpServer to use netty server  (#4739)

* fix 4738

* fix some bug

* fix bug

* remove initProducerManager from AbstractRemotingServer init

* bug fix

* bug fix

* some enhance

* some enhance

* add admin bootstrap

* some enhance

* remove HttpHandlerManager and ClientManageController.

* modify some unit test

* add admin http handlermanager

* Update README.md (#4772)

* [ISSUE #4458] Support MySQL Sink Connector feature (#4771)

* [ISSUE #4458] Support mysql Sink Connector feature

* remove pg jdbc import

* update dependencies

* [ISSUE #4731] HttpRequestProcessor enhancement (#4732)

* resolve conflicts.

* resolve

* [ISSUE #3014]Replace encoding using the static variable DEFAULT_CHARSET (#4776)

* [ISSUE #4770] Empty class member cause NullpointerException (#4777)

* Add null check in writeOffset method

* delete todo

* Move data.put inside null check in writeOffset method

* simplify if judgement

* remove dev environment

* fix style

* [ISSUE #4778] Fix Standalone MessageQueue does not down counter when dequeue (#4779)

* bug fix

* bug fix

* [ISSUE #3833] optimization ZookeeperMetaService (#4780)

a. Change to private modifier.
b. Repeat code extraction as method.

* [ISSUE #3828] Code optimization for StandaloneAdminTest and TestUtils

* [ISSUE #4785] Condition check for source worker (#4786)

* condition_check_for_source_eorker

* ci_typo_fix

* import_order_fix

* [ISSUE #3824] code optimization for MessageEntity (#4792)

* [ISSUE #4795] Replace this exception in beginFlush() with log print and return false (#4797)

* [ISSUE #4796] Use ThreadPoolFactory to create single thread executor for SourceWorker (#4798)

* [ISSUE #3009]change MetricsHandler#get to try-resources (#4800)

* [ISSUE #3830] InterruptedEx